--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			  <figcaption>Fig. 3 - A simple fragment shader</figcaption>
 			</figure>
 			<p>There are two main types of shaders: vertex shaders and fragment shaders. Vertex shaders determine the position and behavior of 3D geometry. According to <a href="http://en.wikipedia.org/wiki/Shader#Pixel_shaders">Wikipedia</a>, "Fragment shaders compute color and other compute color and other attributes of each "fragment" - a technical term usually meaning a single pixel." </p>
-			<p>Shaders are amazing. It blows me away what people are able to create on sites like <a href="http://shadertoy.com/">Shadertoy</a> or <a href="http://glslsandbox.com/">GLSL Sandbox</a>. But for me, the power of shaders comes when they're used in feedback loops.</p>
+			<p>Shaders are amazing. It blows me away what people are able to create on sites like <a target="_blank" href="http://shadertoy.com/">Shadertoy</a> or <a target="_blank" href="http://glslsandbox.com/">GLSL Sandbox</a>. But for me, the power of shaders comes when they're used in feedback loops.</p>
 		</section>
 
 		<section>
